--- a/style.css
+++ b/style.css
@@ -107,3 +107,9 @@ textarea {
   color: #f2f2f2;
   font-size: 12px;
 }
+
+@media only screen and (max-width: 600px) {
+  #app {
+    flex-direction: column;
+  }
+}
