--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body {
   width: 100%;
   background: #111;
-  padding: 80px;
+  padding: 5%;
   font-family: "Roboto", sans-serif;
 }
 
@@ -25,6 +25,7 @@ label {
   width: 100%;
   display: flex;
   flex-direction: row;
+  margin: 0 auto;
 }
 
 .form {
@@ -35,7 +36,6 @@ label {
 }
 
 .result {
-  width: 40%;
   background-color: #151515;
   margin-left: 5px;
 }
@@ -109,7 +109,17 @@ textarea {
 }
 
 @media only screen and (max-width: 600px) {
+  body {
+    padding: 20px;
+  }
+
   #app {
     flex-direction: column;
+  }
+  .form {
+    width: 100%;
+  }
+  .result {
+    margin-top: 20px;
   }
 }
